--- a/thanks.html
+++ b/thanks.html
@@ -49,7 +49,7 @@
 
 				<div class="zawartosc">
 					<p style="color: #fff; font-size: 55px;">DZIĘKUJEMY</p>
-                    <p style="color: #5cb85c; font-size: 35px; margin-top: -35px;"><b>ZA KONTAKT !</b></p>
+                    <p style="color: #5cb85c; font-size: 35px; margin-top: -35px;"><b>ZA KONTAKT Z NAMI !</b></p>
 				</div>
 
 				<div class="socials">
